Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.18 - unreleased 23-Nov-06

	Rick Widmer
        - Multiple changes to vpopmaild:
            Blank input lines are not an error in vpopmaild.
            Separate help before and after login in vpopmaild.
    	    Allow 3 tries to login to vpopmaild.
	    Clean up if add_user fails because of bad user data.
	    Add termination code (.) to get_lastauth return.
	    Number the error messages (XXX) in vpopmaild
            If invalid option is sent in set_limits, show warning
	- Add various patches from others listed below:

	Peter Pentchev (roamer)
	- Various sanity checks and minor optimizations [1573292]
	- Fix child handling - waitpid and sys/wait.h [1573288]
	- Dynamicallly allocate sortdata[] in vpopmail.c [1573287]
	- Include ctype.h in the PostgreSQL backend [1573284]
	- Set SHELL in vdelivermail before executing external programs [1573280]
	- Some more error checking in vchangepw [1573277]
	- Improve the vpopmaild documentation [1573269]
	- Clean cdb files in the distclean target [1573267]
	- Optional building as non-root [1573266]

	Trent Lloyd (lathiat)
	- Add vailas add/delete/list support to vpopmaild [1555398]
	- Refresh assign cache if a domain is deleted [1529744]

	Bill Shupp
	- Add user_count function to vpopmaild
	- Add stat_file function to vpopmaild


5.4.17 - released 12-Jul-06

	Rick Widmer
	- vpopmaild: remove debug output from find_domain function.
	- vpopmail: fix segfault in users/assign sorting code caused by 
	  entries that don't contain a dot (.). [1514733]

	Jeremy Kister
	- vdelivermail: pass qmail-inject's error code instead of always
	  deferring. [1484105]

	Ron Gage
	- vmysql: reconnect to server if connection timed out.

	Rolf Eike Beer
	- vchangepw: add error checking and other code improvements.
	  [1371572]
	- change API for vgetpasswd() to make more sense. [1371566]